# froide-mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  deploy.yml  monitor.yml  nightly.yml
docs/: deployment.md  github_actions_secrets.md  orchestration.md  planned-tools.md  post_release.md  release.md  workload_identity.md
froide_mcp/: __init__.py  auth.py  client.py  config.py  server.py  tools.py
terraform/: artifact_registry.tf  cloud_run.tf  cloudrun.tf  iam.tf  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_auth.py  test_client.py  test_orchestration_tools.py  test_server.py  test_smoke.py  test_tools.py
