[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "froide-mcp"
version = "0.1.0"
description = "MCP server for the Froide FOI platform"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
    "authlib>=1.3.0",        # Google OAuth2 / OIDC
    "itsdangerous>=2.1.0",   # session token signing
    "python-dotenv>=1.0.0",
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
froide-mcp = "froide_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["froide_mcp"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
