[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "froide-mcp"
version = "0.1.0"
description = "MCP server for the Froide FOI platform"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
froide-mcp = "froide_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["froide_mcp"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["froide_mcp"]
omit = ["froide_mcp/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
